[package]
name = "wdj_exam_back_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "greeter-server"
path = "src/server/main.rs"

[[bin]]
name = "hello-client"
path = "src/client/main.rs"

[dependencies]
http = "0.2"
http-body = "0.4.4"
futures-util = {version = "0.3", default-features = false}
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net", "signal"] }
prost-derive = {version = "0.10", optional = true}
prost = "0.10.4"
async-trait = "0.1.56"
tokio-stream = "0.1"

dubbo = "0.1.0"
dubbo-config = "0.1.0"


actix-web = "4.0"

actix-cors = "0.6"  # CORS 中间件

mysql_async = "0.35.1"  # mysql异步版本

once_cell = "1.10.0"

jsonwebtoken = "9.3.0"  # jwt
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

dotenv = "0.15.0" # 环境.env

redis = "0.29"  # redis
r2d2 = "0.8"    # redis连接池

[build-dependencies]
dubbo-build = "0.2.0"
prost-build = "0.11.9"